# theseus

./: .gitignore  app.js  nodemon.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
frontend/: package-lock.json  package.json
frontend/src/: App.js
src/: index.ts
theseus/: main.py
