[tool.poetry]
name = "theseus"
version = "0.1.0"
description = ""
authors = ["Jayden Tan <redacted@redacted.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aionotify = "^0.2.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
