[tool.poetry]
name = "theseus"
version = "0.1.0"
description = ""
authors = ["Jayden Tan <redacted@redacted.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
websockets = "^10.4"
watchfiles = "^0.18.1"
aiotools = "^1.5.9"
attrs = "^22.2.0"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
